read_chapter offcanvas next and prev button and deployment

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ __pycache__/
 *.sqlite3
 venv/
 log.sql
+.env
 # flask session files
 flask_session/
-uploads/
+
+# Ignore everything in the uploads folder
+static/uploads/*
+
+# But don't ignore this specific file
+!static/uploads/placeholder.png
